// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`segment render with icon as title 1`] = `
<div>
  <button
    class="segment segment"
    type="button"
  >
    <svg
      fill="currentColor"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M10.519 12.888h2.908L12.04 8.443h-.055l-1.467 4.445z"
      />
      <path
        clip-rule="evenodd"
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-8.085-4.377L17 17h-2.283l-.693-2.23h-4.13L9.147 17H7l3.237-9.377c.314-.91.68-1.623 1.858-1.623s1.522.716 1.82 1.623z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`segment should display correctly 1`] = `
<div>
  <button
    class="segment segment"
    type="button"
  >
    Title
  </button>
</div>
`;
